fixed spacing issues, added parity toggle

--- a/src/App.css
+++ b/src/App.css
@@ -18,3 +18,7 @@
 .divisible-by-three {
   color: orange;
 }
+
+.placeholder {
+  color: transparent;
+}
